--- a/views/admin/authors/admin-authors.hbs
+++ b/views/admin/authors/admin-authors.hbs
@@ -22,8 +22,9 @@
         <div class="col mb-4">
             <div class="card bg-light" style="width: 18rem; height: auto">
                 <div class="card-body">
-                    <h5 class="card-title text-center">{{this.name}}</h5>
+                    <h5 class="card-title text-center">{{this.name}} {{this.lastName}}</h5>
                     <p class="card-text mt-3"><strong>Correo: </strong> {{this.email}}</p>
+                    <p class="card-text mt-3"><strong>Teléfono: </strong> {{this.phone}}</p>
                     <p class="card-text mt-2"><strong>Libros asociados: </strong> {{lengthValue this.books}}</p>
                     <form class="form-delete" action="/delete-author" method="post">
                         <input type="hidden" name="AuthorId" value="{{this.id}}" />
