--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/custom/virtual-select.min.css" />
-  <link rel="stylesheet" href="/assets/css/bootstrap/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/css/custom/virtual-select.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/custom/style.css" />
   <link rel="stylesheet" href="/assets/css/toast/toastr.css" />
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet' />
